# xhtml2pdf

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG  CHANGELOG.txt  Dockerfile  FUNDING.yml  MANIFEST.in  Makefile  PKG-INFO  README.md  README.rst  README.txt  SECURITY.md  appveyor.yml  ez_setup.py  maintest.py  pip-selfcheck.json  pisa.py  pyproject.toml  requirements.txt  requirements.xml  setup.cfg  setup.py  setup_exe.py  setup_version.py  tox.appveyor.ini  tox.ini
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: linting.yml  spelling.yml  tests.yml
demo/cherrypy/: demo-cherrypy.conf  demo-cherrypy.html  demo-cherrypy.py
demo/djangoproject/: ezpdf.py  manage.py  settings.py  test.py  urls.py  utils.py  views.py  wsgi.py
demo/djangoproject/templates/: base.html  entries.html  index.html  landscape.css  portrait.css  user_printer.html
demo/tgpisa/: dev.cfg  sample-prod.cfg  setup.py  start-tgpisa.py  test.cfg
demo/tgpisa/tgpisa/: commands.py  controllers.py  json.py  model.py  release.py
demo/wsgi/: pisawsgidemo.py
doc/: howto-running-tests.rst  make.bat  pisa-en.html  pisa-en.rst  pisa.css  screen.css  usage.rst
doc/source/: conf.py  encryption.rst  encryption_and_signatures.rst  format_html.rst  howto-running-tests.rst  index.rst  installation.rst  reference.rst  release-notes.rst  usage.rst
doc/source/_static/: custom.css
docs/: Makefile  requirements.txt
docs/_ext/: djangodocs.py
docs/source/: advanced-usage.rst  build_samples.py  conf.py  encryption_and_signatures.rst  examples.rst  format_html.rst  graphics.rst  https_options.rst  index.rst  installation.rst  quickstart.rst  reference.rst  release-notes.rst  usage.rst  watermarks.rst
docs/source/_static/: custom.css
docs/source/contributing/: development-guide.rst
docs/source/guide/: fonts.rst
docs/source/reference/: cli.rst  html.rst  python.rst
ho/: __init__.py
ho/pisa/: __init__.py
manual_test/: cookbook.py  datauri.py  default.css  graph.html  helloworld.py  linkloading.py  pdfform.html  pdfjoiner.py  simple-css.html  simple.py  story2canvas.py  test-all.html  test-background-img.html  test-barcode.html  test-bidirectional-text.html  test-blocks.html  test-cdata.html  test-cdata.xml  test-collapse.html  test-css-body.html  test-css-border.html  test-css-fontface.html  test-css-id.html  test-css-media-1.css  test-css-media-2.css  test-css-media-4.css  test-css-media.html  test-css.html  test-error.html  test-font.html  test-invoice.html  test-linespacing.html  test-link.html  test-margins.html  test-para-border.html  test-pisa-linkfont.html  test-pisa-toc-entities.html  test-pisa-toc.html  test-pre.html  test-syntax.html  (+12 more)
manual_test/css/: grid.css  test-css-media-3.css
manual_test/font/: README.txt
manual_test/font/dejavu/: copyright
manual_test/font/horai-umefont/: copyright
manual_test/font/rina/: license.txt
manual_test/font/teams/: copyright  teamsb.afm
sx/: __init__.py
sx/pisa3/: __init__.py  pisa.py  pisa_context.py  pisa_default.py  pisa_document.py  pisa_paragraph.py  pisa_paragraph2.py  pisa_parser.py  pisa_pdf.py  pisa_reportlab.py  pisa_tables.py  pisa_tags.py  pisa_turbogears.py  pisa_util.py  pisa_version.py  pisa_wsgi.py  reportlab_paragraph.py
sx/w3c/: __init__.py  css.py  cssDOMElementInterface.py  cssParser.py  cssSpecial.py
test/: cookbook.html  cookbook.py  datauri.py  default.css  helloworld.py  linkloading.py  pdf.css  pdfjoiner.py  simple-css.html  simple-test.html  simple.py  story2canvas.py  test-background-img.html  test-bidirectional-text.html  test-cdata.xml  test-css-fontface.html  test-css.html  test-entities.html  test-error.html  test-font.html  test-helloworld.html  test-image.html  test-loremipsum.html  test-page-box.html  test-pisa-linkfont.html  test-pisa-toc-entities.html  test-pisa-toc.html  test-syntax.html  test-unicode-greek.html  test-unicode-japanese.html  test-unicode-thaana.html  test-w3c-css.html  testBackground.py  testEvenOddPage.py  unicode.css  visualdiff.py  witherror.py
test/css/: reset.css
test/font/teams/: copyright  teams.afm  teams.pfb  teamsb.pfb
testrender/: Differences-Solutions  README  testrender-percent  testrender.py
testrender/data/: template.html
testrender/data/source/: adobe_asian_lenguage_pack.html  arabic_font_rendering.html  grid.html  simple-test.html  test-align.html  test-background.html  test-blocks.html  test-collapse.html  test-css-border.html  test-helloworld.html  test-image-align.html  (+9 more)
tests/: __init__.py  arabic_font_test.py  asian_font_test.py  runtests.py  test_CSS_font-family_font_combination.py  test_arabic_font_support.py  test_asian_font_support.py  test_css_media_rule.py  test_cssbuilder.py  test_document.py  test_grid_system.py  test_http.py  test_paragraph.py  test_parser.py  test_reportlab.py  test_right_to_left_font_support.py  test_samples.py  test_selectors.py  test_special_css.py  test_table_css.py  test_tables.py  test_tags.py  test_update_face_name.py  test_uri.py  test_utils.py  ttf_file_metadata_same_name.py
tests/samples/: adobe_asian_lenguage_pack.html  arabic_font_rendering.html  borders.html  font-and-styles.html  images.html  nested_table.html  tables.html  ttf_file_metadata_same_name.html  unicode.css  utf8.html
xhtml2pdf/: __init__.py  charts.py  context.py  default.py  default_grid_system.py  document.py  files.py  grid.py  paragraph.py  paragraph2.py  parser.py  pdf.py  pisa.py  pisa_document.py  pisa_paragraph.py  pisa_parser.py  pisa_turbogears.py  pisa_wsgi.py  reportlab.py  reportlab_paragraph.py  tables.py  tags.py  turbogears.py  util.py  utility_calc_values.py  utility_search_strip_values.py  version.py  wsgi.py  xhtml2pdf_reportlab.py
xhtml2pdf/builders/: grid.py  signs.py  watermarks.py
xhtml2pdf/config/: httpconfig.py
xhtml2pdf/h2pparser/: CSSparser.py  parser.py  tags.py
xhtml2pdf/w3c/: LICENSE.md  __init__.py  css.py  cssDOMElementInterface.py  cssParser.py  cssSpecial.py
(+22 files in other folders)
